--- a/login.html
+++ b/login.html
@@ -34,14 +34,6 @@
                     <h1 class="right-header-title">Вход в аккаунт</h1>
                     <p class="right-header-subtitle">Привет, уже есть аккаунт?</p>
                 </div>
-
-                <div class="lang-dropdown">
-                    <div class="lang_btn">RU</div>
-                    <div class="dropdown-content">
-                        <a href="#">RU</a>
-                        <a href="#">EN</a>
-                    </div>
-                </div>
             </div>
 
             <div class="wrapper">
@@ -88,6 +80,28 @@
 
             </div>
 
+            <div class="login-with">
+                <p class="login-with-subtitle">Войти с использованием</p>
+
+                <a href="" class="google-btn">
+
+                    <img src="img/google_btn.png" alt="Google"> Google
+                </a>
+            </div>
+
+            <div class="change-page">
+                <p class="change_text">Впервые тут?
+                    <a href="#" class="change_link">Регистрация</a>
+                </p>
+            </div>
+
+        </div>
+
+        <div class="lang-dropdown">
+            <select class="change-lang" id="lang">
+                <option value="/ru/">RU</option>
+                <option value="/en/">EN</option>
+            </select>
         </div>
 
         <div class="main-photo"> </div>
