--- a/registration.html
+++ b/registration.html
@@ -31,8 +31,8 @@
         <div class="main-right">
             <div class="right-header">
                 <div class="right-header__text">
-                    <h1 class="right-header-title">Вход в аккаунт</h1>
-                    <p class="right-header-subtitle">Привет, уже есть аккаунт?</p>
+                    <h1 class="right-header-title">Регистрация</h1>
+                    <p class="right-header-subtitle">Регистрируйся и присоединяйся!</p>
                 </div>
             </div>
 
@@ -49,6 +49,11 @@
                             <div class="txt-field">
                                 <input type="text" required>
                                 <span></span>
+                                <label>Имя</label>
+                            </div>
+                            <div class="txt-field">
+                                <input type="text" required>
+                                <span></span>
                                 <label>Email</label>
                             </div>
                             <div class="txt-field password">
@@ -57,8 +62,14 @@
                                 <span></span>
                                 <label>Пароль</label>
                             </div>
-                            <div class="pass">Забыли пароль?</div>
-                            <input type="submit" value="Войти">
+                            <div class="txt-field password">
+                                <input type="password" id="password-input" name="password" required>
+                                <a href="#" class="password-control" onclick="return show_hide_password(this);"></a>
+                                <span></span>
+                                <label>Повторите пароль</label>
+                            </div>
+
+                            <input type="submit" value="Регистрация">
 
                         </form>
                     </div>
@@ -73,25 +84,18 @@
                                 <label>Номер телефона</label>
                             </div>
 
-                            <input type="submit" value="Войти">
+                            <input type="submit" value="Регистрация">
                         </form>
                     </div>
                 </div>
 
             </div>
 
-            <div class="login-with">
-                <p class="login-with-subtitle">Войти с использованием</p>
 
-                <a href="" class="google-btn">
-
-                    <img src="img/google_btn.png" alt="Google"> Google
-                </a>
-            </div>
 
             <div class="change-page">
-                <p class="change_text">Впервые тут?
-                    <a href="/registration.html" class="change_link">Регистрация</a>
+                <p class="change_text">Уже есть аккаунт?
+                    <a href="login.html" class="change_link">Войти</a>
                 </p>
             </div>
 
