edit: login link

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     <div class="item-source">
                         <a href="#" class="item-link">Обучение</a>
                         <a href="#" class="item-link">Каталог</a>
-                        <a href="#" class="item-link">Войти</a>
+                        <a href="login.html" class="item-link">Войти</a>
                     </div>
                 </div>
 
