--- a/login.html
+++ b/login.html
@@ -91,7 +91,7 @@
 
             <div class="change-page">
                 <p class="change_text">Впервые тут?
-                    <a href="/registration.html" class="change_link">Регистрация</a>
+                    <a href="registration.html" class="change_link">Регистрация</a>
                 </p>
             </div>
 
