--- a/registration.html
+++ b/registration.html
@@ -23,7 +23,7 @@
 
 
 
-    <section class="main login">
+    <section class="main registration">
         <div class="header-logo">
             <a href="index.html">ПроАрт</a>
         </div>
