--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/burgerMenu.css">
 
     <link rel="shortcut icon" href="img/icon.svg">
 
 </head>
 
 <body>
+
+
     <section class="header">
         <div class="container">
             <div class="header-menu">
@@ -35,11 +38,40 @@
                 </div>
             </div>
 
+            <div class="burger-menu">
+                <a href="" class="burger-menu_button">
+                    <spun class="burger-menu_lines"></spun>
+                </a>
+
+                <nav class="burger-menu_nav">
+
+                    <div class="burger-menu_logo">
+                        <a href="index.html">ПроАрт</a>
+                    </div>
+
+                    <a href="#" class="burger-menu_link">обучение</a>
+                    <a href="#" class="burger-menu_link">каталог</a>
+                    <a href="login.html" class="burger-menu_link">войти</a>
+
+
+                    <div class="lang-dropdown">
+                        <select class="change-lang" id="lang">
+                            <option value="/ru/">RU</option>
+                            <option value="/en/">EN</option>
+                        </select>
+                    </div>
+                </nav>
+
+                <div class="burger-menu_overlay"></div>
+            </div>
+
             <div class="header-title">
                 <img class="header-logo-img" src="img/main-text.svg" alt="Искусство это интересно">
                 <a class="btn-long" href="#download">Скачать приложение</a>
             </div>
         </div>
+
+
     </section>
 
     <div class="main-card">
@@ -274,6 +306,7 @@
             </div>
         </div>
 
+
         <div class="copyright">
             <p class="copyright-text">Copyright © 2022 Zhidko Ulyana. All rights reserved.</p>
         </div>
@@ -281,6 +314,7 @@
 
 
     <script src="js/reviewSlider.js"></script>
+    <script src="js/BurgerMenu.js"></script>
 </body>
 
 </html>
