--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mobNav.css') }}">
 
-    <link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.svg') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.svg') }}"> -->
+
+    <link rel="shortcut icon" href="../static/img/icon.svg">
+
+    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/mobNav.css">
+
 
 </head>
 
@@ -36,7 +42,7 @@
                 <p>Обучение</p>
             </li>
             <li>
-                <a href="catalog.html" class="nav-icon">
+                <a href="../templates/catalog.html" class="nav-icon">
                     <svg width="24" height="24" viewBox="0 0 19 21" xmlns="http://www.w3.org/2000/svg">
                         <path opacity="0.8"
                             d="M13.1367 12.8093H5.11538C4.84946 12.8093 4.59443 12.9139 4.40639 13.1C4.21836 13.2862 4.11272 13.5387 4.11272 13.802C4.11272 14.0652 4.21836 14.3177 4.40639 14.5039C4.59443 14.69 4.84946 14.7946 5.11538 14.7946H13.1367C13.4026 14.7946 13.6577 14.69 13.8457 14.5039C14.0337 14.3177 14.1394 14.0652 14.1394 13.802C14.1394 13.5387 14.0337 13.2862 13.8457 13.1C13.6577 12.9139 13.4026 12.8093 13.1367 12.8093ZM13.1367 8.83869H7.12072C6.85479 8.83869 6.59976 8.94327 6.41173 9.12943C6.22369 9.31559 6.11805 9.56807 6.11805 9.83134C6.11805 10.0946 6.22369 10.3471 6.41173 10.5332C6.59976 10.7194 6.85479 10.824 7.12072 10.824H13.1367C13.4026 10.824 13.6577 10.7194 13.8457 10.5332C14.0337 10.3471 14.1394 10.0946 14.1394 9.83134C14.1394 9.56807 14.0337 9.31559 13.8457 9.12943C13.6577 8.94327 13.4026 8.83869 13.1367 8.83869ZM17.1474 2.88277H14.1394V1.89011C14.1394 1.62685 14.0337 1.37436 13.8457 1.1882C13.6577 1.00204 13.4026 0.897461 13.1367 0.897461C12.8708 0.897461 12.6158 1.00204 12.4277 1.1882C12.2397 1.37436 12.1341 1.62685 12.1341 1.89011V2.88277H10.1287V1.89011C10.1287 1.62685 10.0231 1.37436 9.83504 1.1882C9.64701 1.00204 9.39197 0.897461 9.12605 0.897461C8.86013 0.897461 8.6051 1.00204 8.41706 1.1882C8.22902 1.37436 8.12338 1.62685 8.12338 1.89011V2.88277H6.11805V1.89011C6.11805 1.62685 6.01241 1.37436 5.82438 1.1882C5.63634 1.00204 5.38131 0.897461 5.11538 0.897461C4.84946 0.897461 4.59443 1.00204 4.40639 1.1882C4.21836 1.37436 4.11272 1.62685 4.11272 1.89011V2.88277H1.10472C0.838794 2.88277 0.583761 2.98735 0.395725 3.17351C0.207689 3.35967 0.102051 3.61215 0.102051 3.87542V17.7726C0.102051 18.5624 0.418964 19.3198 0.983074 19.8783C1.54718 20.4368 2.31228 20.7505 3.11005 20.7505H15.1421C15.9398 20.7505 16.7049 20.4368 17.269 19.8783C17.8331 19.3198 18.1501 18.5624 18.1501 17.7726V3.87542C18.1501 3.61215 18.0444 3.35967 17.8564 3.17351C17.6683 2.98735 17.4133 2.88277 17.1474 2.88277V2.88277ZM16.1447 17.7726C16.1447 18.0358 16.0391 18.2883 15.851 18.4745C15.663 18.6606 15.408 18.7652 15.1421 18.7652H3.11005C2.84413 18.7652 2.5891 18.6606 2.40106 18.4745C2.21302 18.2883 2.10738 18.0358 2.10738 17.7726V4.86807H4.11272V5.86073C4.11272 6.12399 4.21836 6.37648 4.40639 6.56264C4.59443 6.7488 4.84946 6.85338 5.11538 6.85338C5.38131 6.85338 5.63634 6.7488 5.82438 6.56264C6.01241 6.37648 6.11805 6.12399 6.11805 5.86073V4.86807H8.12338V5.86073C8.12338 6.12399 8.22902 6.37648 8.41706 6.56264C8.6051 6.7488 8.86013 6.85338 9.12605 6.85338C9.39197 6.85338 9.64701 6.7488 9.83504 6.56264C10.0231 6.37648 10.1287 6.12399 10.1287 5.86073V4.86807H12.1341V5.86073C12.1341 6.12399 12.2397 6.37648 12.4277 6.56264C12.6158 6.7488 12.8708 6.85338 13.1367 6.85338C13.4026 6.85338 13.6577 6.7488 13.8457 6.56264C14.0337 6.37648 14.1394 6.12399 14.1394 5.86073V4.86807H16.1447V17.7726Z" />
@@ -45,7 +51,7 @@
                 <p>Каталог</p>
             </li>
             <li>
-                <a href="login.html" class="nav-icon">
+                <a href="../templates/login.html" class="nav-icon">
                     <svg width="24" height="24" viewBox="0 0 21 22" xmlns="http://www.w3.org/2000/svg">
                         <path opacity="0.8"
                             d="M14.21 11.7096C15.1904 10.9383 15.906 9.88056 16.2572 8.68358C16.6085 7.4866 16.5779 6.2099 16.1698 5.0311C15.7617 3.85231 14.9963 2.83003 13.9801 2.10649C12.9639 1.38296 11.7474 0.994141 10.5 0.994141C9.25255 0.994141 8.03611 1.38296 7.01993 2.10649C6.00374 2.83003 5.23834 3.85231 4.83021 5.0311C4.42208 6.2099 4.39151 7.4866 4.74276 8.68358C5.09401 9.88056 5.80961 10.9383 6.79 11.7096C5.11007 12.3827 3.64428 13.499 2.54889 14.9396C1.45349 16.3801 0.76956 18.0909 0.569997 19.8896C0.555551 20.021 0.567113 20.1538 0.604022 20.2807C0.640931 20.4075 0.702464 20.5259 0.785108 20.629C0.952016 20.8371 1.19478 20.9705 1.46 20.9996C1.72521 21.0288 1.99116 20.9514 2.19932 20.7845C2.40749 20.6176 2.54082 20.3749 2.57 20.1096C2.78958 18.1548 3.72168 16.3494 5.18822 15.0384C6.65475 13.7274 8.5529 13.0027 10.52 13.0027C12.4871 13.0027 14.3852 13.7274 15.8518 15.0384C17.3183 16.3494 18.2504 18.1548 18.47 20.1096C18.4972 20.3554 18.6144 20.5823 18.7991 20.7467C18.9838 20.911 19.2228 21.0011 19.47 20.9996H19.58C19.8421 20.9695 20.0817 20.8369 20.2466 20.6309C20.4114 20.4248 20.4881 20.162 20.46 19.8996C20.2595 18.0958 19.5719 16.3806 18.4708 14.9378C17.3698 13.4951 15.8969 12.3791 14.21 11.7096ZM10.5 10.9996C9.70887 10.9996 8.93551 10.765 8.27772 10.3255C7.61992 9.88599 7.10723 9.26128 6.80448 8.53037C6.50173 7.79947 6.42251 6.9952 6.57686 6.21928C6.7312 5.44335 7.11216 4.73062 7.67157 4.17121C8.23098 3.6118 8.94371 3.23084 9.71964 3.0765C10.4956 2.92215 11.2998 3.00137 12.0307 3.30412C12.7616 3.60687 13.3864 4.11956 13.8259 4.77736C14.2654 5.43515 14.5 6.20851 14.5 6.99964C14.5 8.0605 14.0786 9.07792 13.3284 9.82806C12.5783 10.5782 11.5609 10.9996 10.5 10.9996Z" />
@@ -69,33 +75,33 @@
 
 
     <section class="header">
-        <div class="container">
-            <div class="header-menu">
-                <div class="header-logo">
-                    <a href="index.html">ПроАрт</a>
-                </div>
 
-                <div class="header-nav">
-                    <nav class="main-nav">
-                        <a href="#" class="main-nav__link">обучение</a>
-                        <a href="catalog.html" class="main-nav__link"> каталог</a>
-                        <a href="login.html" class="main-nav__link">войти</a>
-                    </nav>
-                </div>
+        <div class="header-menu">
+            <div class="header-logo">
+                <a href="index.html">ПроАрт</a>
             </div>
 
-            <div class="header-title">
-                <img class="header-logo-img" src="{{ url_for('static', filename='img/main-text.svg') }}" alt="Искусство это интересно">
-                <a class="btn-long" href="#download">Скачать приложение</a>
+            <div class="header-nav">
+                <nav class="main-nav">
+                    <a href="#" class="main-nav__link">обучение</a>
+                    <a href="../templates/catalog.html" class="main-nav__link">каталог</a>
+                    <a href="../templates/login.html" class="main-nav__link">войти</a>
+                </nav>
             </div>
         </div>
+
+        <div class="header-title">
+            <img class="header-logo-img" src="../static/img/main-text.svg" alt="Искусство это интересно">
+            <a class="btn-long" href="#download">Скачать приложение</a>
+        </div>
+
     </section>
 
     <div class="main-card">
         <h3 class="main-card-title">Получите качественные знания на <span>ПроАрт</span></h3>
         <h4 class="main-card-desc main-desc">Онлайн-курсы от ведущих вузов и&nbsp;признанных экспертов</h4>
 
-        <button class="btn-small">Посмотреть каталог</button>
+        <a href="../templates/catalog.html" class="btn-small">Посмотреть каталог</a>
     </div>
 
     <section class="advantage">
@@ -105,7 +111,7 @@
             <div class="advantage__block">
                 <div class="advantage__card">
                     <div class="advantage__card-square effective">
-                        <img class="advantage__card-icon" src="{{ url_for('static', filename='img/card-icon/effective.svg') }}" alt="иконка">
+                        <img class="advantage__card-icon" src="../static/img/card-icon/effective.svg" alt="иконка">
                     </div>
 
                     <div class="advantage__card-text">
@@ -116,7 +122,7 @@
 
                 <div class="advantage__card">
                     <div class="advantage__card-square cool">
-                        <img class="advantage__card-icon" src="{{ url_for('static', filename='img/card-icon/cool.svg') }}" alt="иконка">
+                        <img class="advantage__card-icon" src="../static/img/card-icon/cool.svg" alt="иконка">
                     </div>
 
                     <div class="advantage__card-text">
@@ -127,7 +133,7 @@
 
                 <div class="advantage__card">
                     <div class="advantage__card-square interesting">
-                        <img class="advantage__card-icon" src="{{ url_for('static', filename='img/card-icon/intresting.svg') }}" alt="иконка">
+                        <img class="advantage__card-icon" src="../static/img/card-icon/intresting.svg" alt="иконка">
                     </div>
 
                     <div class="advantage__card-text">
@@ -138,7 +144,7 @@
 
                 <div class="advantage__card">
                     <div class="advantage__card-square no-boring">
-                        <img class="advantage__card-icon" src="{{ url_for('static', filename='img/card-icon/no_boring.svg') }}" alt="иконка">
+                        <img class="advantage__card-icon" src="../static/img/card-icon/no_boring.svg" alt="иконка">
                     </div>
 
                     <div class="advantage__card-text">
@@ -162,7 +168,7 @@
             </div>
         </div>
         <div class="courses-banner__block-img">
-            <img class="courses-banner__img" src="{{ url_for('static', filename='img/courses.png') }}" alt="скрин экрана телефона">
+            <img class="courses-banner__img" src="../static/img/courses.png" alt="скрин экрана телефона">
         </div>
     </section>
 
@@ -177,12 +183,12 @@
         </div>
 
         <div class="download__block" id="download">
-            <img class="download__block-img" src="{{ url_for('static', filename='img/download_img.png') }}" alt="картинка">
+            <img class="download__block-img" src="../static/img/download_img.png" alt="картинка">
 
             <div class="download__block__buttons">
                 <div class="download__block__item download-google">
                     <a class="download__block__link" href="#">
-                        <img class="download__block__link-img" src="{{ url_for('static', filename='img/google-play.svg') }}" alt="иконка google-play">
+                        <img class="download__block__link-img" src="../static/img/google-play.svg" alt="иконка google-play">
                         <p class="download__block__link-text">Доступно в Google Play</p>
                     </a>
                 </div>
@@ -190,7 +196,7 @@
                 <div class="circle-img"></div>
                 <div class="download__block__item download-apple">
                     <a class="download__block__link" href="#">
-                        <img class="download__block__link-img" src="{{ url_for('static', filename='img/apple.svg') }}" alt="иконка apple">
+                        <img class="download__block__link-img" src="../static/img/apple.svg" alt="иконка apple">
                         <p class="download__block__link-text">Скачать в App Store</p>
                     </a>
                 </div>
@@ -209,13 +215,13 @@
 
                 <div class="reviews-right">
                     <div class="reviews-right__block">
-                        <img class="reviews-right__img" src="{{ url_for('static', filename='img/quote.svg') }}" alt="кавычки">
+                        <img class="reviews-right__img" src="../static/img/quote.svg" alt="кавычки">
                         <div class="reviews-right__text">
                             <p class="reviews-right__desc main-desc">
                                 Отличные курсы, лучшие из всех, что я когда-либо проходил. С <b>ПроАрт</b> я познакомился в университете, где онлайн-задания довольно успешно внедрялись преподавателями в учебный план.
                             </p>
                             <div class="reviews-right__author">
-                                <img class="reviews-right__avatar" src="{{ url_for('static', filename='img/review-1.jpg') }}" alt="фото пользователя">
+                                <img class="reviews-right__avatar" src="../static/img/review-1.jpg" alt="фото пользователя">
                                 <span class="author-name main-desc">— Колов Николай</span>
                             </div>
                         </div>
@@ -232,13 +238,13 @@
 
                 <div class="reviews-right">
                     <div class="reviews-right__block">
-                        <img class="reviews-right__img" src="{{ url_for('static', filename='img/quote.svg') }}" alt="кавычки">
+                        <img class="reviews-right__img" src="../static/img/quote.svg" alt="кавычки">
                         <div class="reviews-right__text">
                             <p class="reviews-right__desc main-desc">
                                 Очень удобно и интересно проходить уроки. В любое удобное время можно зайти и продолжить изучения. Очень понравился курс "Супрематизм"
                             </p>
                             <div class="reviews-right__author">
-                                <img class="reviews-right__avatar" src="{{ url_for('static', filename='img/review-2.jpg') }}" alt="фото пользователя">
+                                <img class="reviews-right__avatar" src="../static/img/review-2.jpg" alt="фото пользователя">
                                 <span class="author-name main-desc">— Ольга Муровва</span>
                             </div>
                         </div>
@@ -255,7 +261,7 @@
 
     <section class="lessons-banner">
         <div class="lessons-banner__block-img">
-            <img class="lessons-banner__img" src="{{ url_for('static', filename='img/lessons.png') }}" alt="скрин экрана телефона">
+            <img class="lessons-banner__img" src="../static/img/lessons.png" alt="скрин экрана телефона">
         </div>
 
         <div class="lessons-banner__block">
@@ -286,8 +292,8 @@
                     </div>
                     <div class="item-source">
                         <a href="#" class="item-link">Обучение</a>
-                        <a href="catalog.html" class="item-link">Каталог</a>
-                        <a href="login.html" class="item-link">Войти</a>
+                        <a href="../templates/catalog.html" class="item-link">Каталог</a>
+                        <a href="../templates/login.html" class="item-link">Войти</a>
                     </div>
                 </div>
 
@@ -314,11 +320,11 @@
 
             <div class="footer__item">
                 <div class="footer-social">
-                    <a href="#" class="social-link"><img src="{{ url_for('static', filename='img/footer-icon/youtube.svg') }}" alt="иконка youtube"></a>
-                    <a href="#" class="social-link"><img src="{{ url_for('static', filename='img/footer-icon/facebook.svg') }}" alt="иконка facebook"></a>
-                    <a href="#" class="social-link"><img src="{{ url_for('static', filename='img/footer-icon/linkedin.svg') }}" alt="иконка linkedin"></a>
-                    <a href="#" class="social-link"><img src="{{ url_for('static', filename='img/footer-icon/twitter.svg') }}" alt="иконка twitter"></a>
-                    <a href="#" class="social-link"><img src="{{ url_for('static', filename='img/footer-icon/instagram.svg') }}" alt="иконка instagram"></a>
+                    <a href="#" class="social-link"><img src="../static/img/footer-icon/youtube.svg" alt="иконка youtube"></a>
+                    <a href="#" class="social-link"><img src="../static/img/footer-icon/facebook.svg" alt="иконка facebook"></a>
+                    <a href="#" class="social-link"><img src="../static/img/footer-icon/linkedin.svg" alt="иконка linkedin"></a>
+                    <a href="#" class="social-link"><img src="../static/img/footer-icon/twitter.svg" alt="иконка twitter"></a>
+                    <a href="#" class="social-link"><img src="../static/img/footer-icon/instagram.svg" alt="иконка instagram"></a>
                 </div>
             </div>
         </div>
@@ -330,7 +336,7 @@
     </section>
 
 
-    <script src="{{ url_for('static', filename='js/reviewSlider.js') }}"></script>
+    <script src="../static/js/reviewSlider.js"></script>
 </body>
 
 </html>
