--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </svg>
 
                 </a>
-                <p>Обучение</p>
+                <p>Главная</p>
             </li>
             <li>
                 <a href="templates/catalog.html" class="nav-icon">
@@ -83,7 +83,7 @@
 
             <div class="header-nav">
                 <nav class="main-nav">
-                    <a href="#" class="main-nav__link">обучение</a>
+                    <a href="index.html" class="main-nav__link">главная</a>
                     <a href="templates/catalog.html" class="main-nav__link">каталог</a>
                     <a href="templates/login.html" class="main-nav__link">войти</a>
                 </nav>
@@ -291,7 +291,7 @@
                         <a href="index.html" class="item-name-link footer-logo">ПроАрт</a>
                     </div>
                     <div class="item-source">
-                        <a href="#" class="item-link">Обучение</a>
+                        <a href="index.html" class="item-link">Главная</a>
                         <a href="templates/catalog.html" class="item-link">Каталог</a>
                         <a href="templates/login.html" class="item-link">Войти</a>
                     </div>
