edit: index link, catalog style

--- a/index.html
+++ b/index.html
@@ -280,7 +280,8 @@
         <p class="promo-widget__desc main-desc">
             Начать учиться можно прямо сейчас, выбирайте курс и проходите его, зарабатывая балы и получая награды!
         </p>
-        <button class="btn-small ">Посмотреть каталог</button>
+
+        <a href="templates/catalog.html" class="btn-small">Посмотреть каталог</a>
     </section>
 
     <section class="footer">
